// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: PreviewPDFModal interaction test: Modal onCancel event 1`] = `
<PreviewPDFModal
  href=".jpg"
  onCancel={[MockFunction]}
  onDestroy={[MockFunction]}
  visible={true}
>
  <Modal
    afterClose={[MockFunction]}
    bodyStyle={
      Object {
        "height": "80vh",
        "width": "100%",
      }
    }
    centered={true}
    closable={false}
    confirmLoading={false}
    destroyOnClose={true}
    footer={null}
    maskTransitionName="fade"
    okType="primary"
    onCancel={[Function]}
    transitionName="zoom"
    visible={true}
    width={1000}
  >
    <Component
      afterClose={[MockFunction]}
      bodyStyle={
        Object {
          "height": "80vh",
          "width": "100%",
        }
      }
      closable={false}
      closeIcon={
        <span
          className="ant-modal-close-x"
        >
          <Close
            className="ant-modal-close-icon"
          />
        </span>
      }
      confirmLoading={false}
      destroyOnClose={true}
      footer={null}
      maskTransitionName="fade"
      okType="primary"
      onCancel={[Function]}
      onClose={[Function]}
      prefixCls="ant-modal"
      transitionName="zoom"
      visible={true}
      width={1000}
      wrapClassName="ant-modal-centered"
    >
      <PortalWrapper
        visible={true}
      >
        <Portal
          getContainer={[Function]}
        >
          <Portal
            containerInfo={
              <div>
                <div>
                  <div
                    class="ant-modal-mask fade-appear"
                  />
                  <div
                    class="ant-modal-wrap ant-modal-centered"
                    role="dialog"
                    tabindex="-1"
                  >
                    <div
                      class="ant-modal zoom-appear"
                      role="document"
                      style="width: 1000px;"
                    >
                      <div
                        aria-hidden="true"
                        style="width: 0px; height: 0px; overflow: hidden;"
                        tabindex="0"
                      />
                      <div
                        class="ant-modal-content"
                      >
                        <div
                          class="ant-modal-body"
                          style="width: 100%; height: 80vh;"
                        >
                          <iframe
                            src=".jpg"
                            style="width: 100%; height: 100%;"
                            title="previewer"
                          />
                        </div>
                      </div>
                      <div
                        aria-hidden="true"
                        style="width: 0px; height: 0px; overflow: hidden;"
                        tabindex="0"
                      />
                    </div>
                  </div>
                </div>
              </div>
            }
          >
            <Dialog
              afterClose={[MockFunction]}
              bodyStyle={
                Object {
                  "height": "80vh",
                  "width": "100%",
                }
              }
              className=""
              closable={false}
              closeIcon={
                <span
                  className="ant-modal-close-x"
                >
                  <Close
                    className="ant-modal-close-icon"
                  />
                </span>
              }
              confirmLoading={false}
              destroyOnClose={true}
              footer={null}
              getContainer={[Function]}
              getOpenCount={[Function]}
              keyboard={true}
              mask={true}
              maskClosable={true}
              maskTransitionName="fade"
              okType="primary"
              onCancel={[Function]}
              onClose={[Function]}
              prefixCls="ant-modal"
              transitionName="zoom"
              visible={true}
              width={1000}
              wrapClassName="ant-modal-centered"
            >
              <div>
                <Animate
                  animation={Object {}}
                  component=""
                  componentProps={Object {}}
                  key="mask"
                  onAppear={[Function]}
                  onEnd={[Function]}
                  onEnter={[Function]}
                  onLeave={[Function]}
                  showProp="visible"
                  transitionAppear={true}
                  transitionEnter={true}
                  transitionLeave={true}
                  transitionName="fade"
                >
                  <AnimateChild
                    animation={Object {}}
                    key="mask"
                    transitionAppear={true}
                    transitionEnter={true}
                    transitionLeave={true}
                    transitionName="fade"
                  >
                    <LazyRenderBox
                      className="ant-modal-mask"
                      hiddenClassName="ant-modal-mask-hidden"
                      key="mask"
                      style={Object {}}
                      visible={true}
                    >
                      <div
                        className="ant-modal-mask"
                        style={Object {}}
                      />
                    </LazyRenderBox>
                  </AnimateChild>
                </Animate>
                <div
                  aria-labelledby={null}
                  className="ant-modal-wrap ant-modal-centered"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  onMouseUp={[Function]}
                  role="dialog"
                  style={
                    Object {
                      "display": null,
                    }
                  }
                  tabIndex={-1}
                >
                  <Animate
                    animation={Object {}}
                    component=""
                    componentProps={Object {}}
                    key="dialog"
                    onAppear={[Function]}
                    onEnd={[Function]}
                    onEnter={[Function]}
                    onLeave={[Function]}
                    showProp="visible"
                    transitionAppear={true}
                    transitionEnter={true}
                    transitionLeave={true}
                    transitionName="zoom"
                  >
                    <AnimateChild
                      animation={Object {}}
                      key="dialog-element"
                      transitionAppear={true}
                      transitionEnter={true}
                      transitionLeave={true}
                      transitionName="zoom"
                    >
                      <LazyRenderBox
                        className="ant-modal "
                        key="dialog-element"
                        onMouseDown={[Function]}
                        role="document"
                        style={
                          Object {
                            "width": 1000,
                          }
                        }
                        visible={true}
                      >
                        <div
                          className="ant-modal "
                          onMouseDown={[Function]}
                          role="document"
                          style={
                            Object {
                              "width": 1000,
                            }
                          }
                        >
                          <div
                            aria-hidden="true"
                            style={
                              Object {
                                "height": 0,
                                "overflow": "hidden",
                                "width": 0,
                              }
                            }
                            tabIndex={0}
                          />
                          <div
                            className="ant-modal-content"
                          >
                            <div
                              className="ant-modal-body"
                              style={
                                Object {
                                  "height": "80vh",
                                  "width": "100%",
                                }
                              }
                            >
                              <iframe
                                src=".jpg"
                                style={
                                  Object {
                                    "height": "100%",
                                    "width": "100%",
                                  }
                                }
                                title="previewer"
                              />
                            </div>
                          </div>
                          <div
                            aria-hidden="true"
                            style={
                              Object {
                                "height": 0,
                                "overflow": "hidden",
                                "width": 0,
                              }
                            }
                            tabIndex={0}
                          />
                        </div>
                      </LazyRenderBox>
                    </AnimateChild>
                  </Animate>
                </div>
              </div>
            </Dialog>
          </Portal>
        </Portal>
      </PortalWrapper>
    </Component>
  </Modal>
</PreviewPDFModal>
`;

exports[`Component: PreviewPDFModal render test 1`] = `
<PreviewPDFModal
  href=".pdf"
  visible={true}
>
  <Modal
    bodyStyle={
      Object {
        "height": "80vh",
        "width": "100%",
      }
    }
    centered={true}
    closable={false}
    confirmLoading={false}
    destroyOnClose={true}
    footer={null}
    maskTransitionName="fade"
    okType="primary"
    onCancel={[Function]}
    transitionName="zoom"
    visible={true}
    width={1000}
  >
    <Component
      bodyStyle={
        Object {
          "height": "80vh",
          "width": "100%",
        }
      }
      closable={false}
      closeIcon={
        <span
          className="ant-modal-close-x"
        >
          <Close
            className="ant-modal-close-icon"
          />
        </span>
      }
      confirmLoading={false}
      destroyOnClose={true}
      footer={null}
      maskTransitionName="fade"
      okType="primary"
      onCancel={[Function]}
      onClose={[Function]}
      prefixCls="ant-modal"
      transitionName="zoom"
      visible={true}
      width={1000}
      wrapClassName="ant-modal-centered"
    >
      <PortalWrapper
        visible={true}
      >
        <Portal
          getContainer={[Function]}
        >
          <Portal
            containerInfo={
              <div>
                <div>
                  <div
                    class="ant-modal-mask fade-appear"
                  />
                  <div
                    class="ant-modal-wrap ant-modal-centered"
                    role="dialog"
                    tabindex="-1"
                  >
                    <div
                      class="ant-modal zoom-appear"
                      role="document"
                      style="width: 1000px;"
                    >
                      <div
                        aria-hidden="true"
                        style="width: 0px; height: 0px; overflow: hidden;"
                        tabindex="0"
                      />
                      <div
                        class="ant-modal-content"
                      >
                        <div
                          class="ant-modal-body"
                          style="width: 100%; height: 80vh;"
                        >
                          <iframe
                            src=".pdf"
                            style="width: 100%; height: 100%;"
                            title="previewer"
                          />
                        </div>
                      </div>
                      <div
                        aria-hidden="true"
                        style="width: 0px; height: 0px; overflow: hidden;"
                        tabindex="0"
                      />
                    </div>
                  </div>
                </div>
              </div>
            }
          >
            <Dialog
              bodyStyle={
                Object {
                  "height": "80vh",
                  "width": "100%",
                }
              }
              className=""
              closable={false}
              closeIcon={
                <span
                  className="ant-modal-close-x"
                >
                  <Close
                    className="ant-modal-close-icon"
                  />
                </span>
              }
              confirmLoading={false}
              destroyOnClose={true}
              footer={null}
              getContainer={[Function]}
              getOpenCount={[Function]}
              keyboard={true}
              mask={true}
              maskClosable={true}
              maskTransitionName="fade"
              okType="primary"
              onCancel={[Function]}
              onClose={[Function]}
              prefixCls="ant-modal"
              transitionName="zoom"
              visible={true}
              width={1000}
              wrapClassName="ant-modal-centered"
            >
              <div>
                <Animate
                  animation={Object {}}
                  component=""
                  componentProps={Object {}}
                  key="mask"
                  onAppear={[Function]}
                  onEnd={[Function]}
                  onEnter={[Function]}
                  onLeave={[Function]}
                  showProp="visible"
                  transitionAppear={true}
                  transitionEnter={true}
                  transitionLeave={true}
                  transitionName="fade"
                >
                  <AnimateChild
                    animation={Object {}}
                    key="mask"
                    transitionAppear={true}
                    transitionEnter={true}
                    transitionLeave={true}
                    transitionName="fade"
                  >
                    <LazyRenderBox
                      className="ant-modal-mask"
                      hiddenClassName="ant-modal-mask-hidden"
                      key="mask"
                      style={Object {}}
                      visible={true}
                    >
                      <div
                        className="ant-modal-mask"
                        style={Object {}}
                      />
                    </LazyRenderBox>
                  </AnimateChild>
                </Animate>
                <div
                  aria-labelledby={null}
                  className="ant-modal-wrap ant-modal-centered"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  onMouseUp={[Function]}
                  role="dialog"
                  style={
                    Object {
                      "display": null,
                    }
                  }
                  tabIndex={-1}
                >
                  <Animate
                    animation={Object {}}
                    component=""
                    componentProps={Object {}}
                    key="dialog"
                    onAppear={[Function]}
                    onEnd={[Function]}
                    onEnter={[Function]}
                    onLeave={[Function]}
                    showProp="visible"
                    transitionAppear={true}
                    transitionEnter={true}
                    transitionLeave={true}
                    transitionName="zoom"
                  >
                    <AnimateChild
                      animation={Object {}}
                      key="dialog-element"
                      transitionAppear={true}
                      transitionEnter={true}
                      transitionLeave={true}
                      transitionName="zoom"
                    >
                      <LazyRenderBox
                        className="ant-modal "
                        key="dialog-element"
                        onMouseDown={[Function]}
                        role="document"
                        style={
                          Object {
                            "width": 1000,
                          }
                        }
                        visible={true}
                      >
                        <div
                          className="ant-modal "
                          onMouseDown={[Function]}
                          role="document"
                          style={
                            Object {
                              "width": 1000,
                            }
                          }
                        >
                          <div
                            aria-hidden="true"
                            style={
                              Object {
                                "height": 0,
                                "overflow": "hidden",
                                "width": 0,
                              }
                            }
                            tabIndex={0}
                          />
                          <div
                            className="ant-modal-content"
                          >
                            <div
                              className="ant-modal-body"
                              style={
                                Object {
                                  "height": "80vh",
                                  "width": "100%",
                                }
                              }
                            >
                              <iframe
                                src=".pdf"
                                style={
                                  Object {
                                    "height": "100%",
                                    "width": "100%",
                                  }
                                }
                                title="previewer"
                              />
                            </div>
                          </div>
                          <div
                            aria-hidden="true"
                            style={
                              Object {
                                "height": 0,
                                "overflow": "hidden",
                                "width": 0,
                              }
                            }
                            tabIndex={0}
                          />
                        </div>
                      </LazyRenderBox>
                    </AnimateChild>
                  </Animate>
                </div>
              </div>
            </Dialog>
          </Portal>
        </Portal>
      </PortalWrapper>
    </Component>
  </Modal>
</PreviewPDFModal>
`;

exports[`Component: PreviewPDFModal render test 2`] = `
<PreviewPDFModal
  href=".pdf"
>
  <Modal
    bodyStyle={
      Object {
        "height": "80vh",
        "width": "100%",
      }
    }
    centered={true}
    closable={false}
    confirmLoading={false}
    destroyOnClose={true}
    footer={null}
    maskTransitionName="fade"
    okType="primary"
    onCancel={[Function]}
    transitionName="zoom"
    visible={true}
    width={1000}
  >
    <Component
      bodyStyle={
        Object {
          "height": "80vh",
          "width": "100%",
        }
      }
      closable={false}
      closeIcon={
        <span
          className="ant-modal-close-x"
        >
          <Close
            className="ant-modal-close-icon"
          />
        </span>
      }
      confirmLoading={false}
      destroyOnClose={true}
      footer={null}
      maskTransitionName="fade"
      okType="primary"
      onCancel={[Function]}
      onClose={[Function]}
      prefixCls="ant-modal"
      transitionName="zoom"
      visible={true}
      width={1000}
      wrapClassName="ant-modal-centered"
    >
      <PortalWrapper
        visible={true}
      >
        <Portal
          getContainer={[Function]}
        >
          <Portal
            containerInfo={
              <div>
                <div>
                  <div
                    class="ant-modal-mask fade-appear"
                  />
                  <div
                    class="ant-modal-wrap ant-modal-centered"
                    role="dialog"
                    tabindex="-1"
                  >
                    <div
                      class="ant-modal zoom-appear"
                      role="document"
                      style="width: 1000px;"
                    >
                      <div
                        aria-hidden="true"
                        style="width: 0px; height: 0px; overflow: hidden;"
                        tabindex="0"
                      />
                      <div
                        class="ant-modal-content"
                      >
                        <div
                          class="ant-modal-body"
                          style="width: 100%; height: 80vh;"
                        >
                          <iframe
                            src=".pdf"
                            style="width: 100%; height: 100%;"
                            title="previewer"
                          />
                        </div>
                      </div>
                      <div
                        aria-hidden="true"
                        style="width: 0px; height: 0px; overflow: hidden;"
                        tabindex="0"
                      />
                    </div>
                  </div>
                </div>
              </div>
            }
          >
            <Dialog
              bodyStyle={
                Object {
                  "height": "80vh",
                  "width": "100%",
                }
              }
              className=""
              closable={false}
              closeIcon={
                <span
                  className="ant-modal-close-x"
                >
                  <Close
                    className="ant-modal-close-icon"
                  />
                </span>
              }
              confirmLoading={false}
              destroyOnClose={true}
              footer={null}
              getContainer={[Function]}
              getOpenCount={[Function]}
              keyboard={true}
              mask={true}
              maskClosable={true}
              maskTransitionName="fade"
              okType="primary"
              onCancel={[Function]}
              onClose={[Function]}
              prefixCls="ant-modal"
              transitionName="zoom"
              visible={true}
              width={1000}
              wrapClassName="ant-modal-centered"
            >
              <div>
                <Animate
                  animation={Object {}}
                  component=""
                  componentProps={Object {}}
                  key="mask"
                  onAppear={[Function]}
                  onEnd={[Function]}
                  onEnter={[Function]}
                  onLeave={[Function]}
                  showProp="visible"
                  transitionAppear={true}
                  transitionEnter={true}
                  transitionLeave={true}
                  transitionName="fade"
                >
                  <AnimateChild
                    animation={Object {}}
                    key="mask"
                    transitionAppear={true}
                    transitionEnter={true}
                    transitionLeave={true}
                    transitionName="fade"
                  >
                    <LazyRenderBox
                      className="ant-modal-mask"
                      hiddenClassName="ant-modal-mask-hidden"
                      key="mask"
                      style={Object {}}
                      visible={true}
                    >
                      <div
                        className="ant-modal-mask"
                        style={Object {}}
                      />
                    </LazyRenderBox>
                  </AnimateChild>
                </Animate>
                <div
                  aria-labelledby={null}
                  className="ant-modal-wrap ant-modal-centered"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  onMouseUp={[Function]}
                  role="dialog"
                  style={
                    Object {
                      "display": null,
                    }
                  }
                  tabIndex={-1}
                >
                  <Animate
                    animation={Object {}}
                    component=""
                    componentProps={Object {}}
                    key="dialog"
                    onAppear={[Function]}
                    onEnd={[Function]}
                    onEnter={[Function]}
                    onLeave={[Function]}
                    showProp="visible"
                    transitionAppear={true}
                    transitionEnter={true}
                    transitionLeave={true}
                    transitionName="zoom"
                  >
                    <AnimateChild
                      animation={Object {}}
                      key="dialog-element"
                      transitionAppear={true}
                      transitionEnter={true}
                      transitionLeave={true}
                      transitionName="zoom"
                    >
                      <LazyRenderBox
                        className="ant-modal "
                        key="dialog-element"
                        onMouseDown={[Function]}
                        role="document"
                        style={
                          Object {
                            "width": 1000,
                          }
                        }
                        visible={true}
                      >
                        <div
                          className="ant-modal "
                          onMouseDown={[Function]}
                          role="document"
                          style={
                            Object {
                              "width": 1000,
                            }
                          }
                        >
                          <div
                            aria-hidden="true"
                            style={
                              Object {
                                "height": 0,
                                "overflow": "hidden",
                                "width": 0,
                              }
                            }
                            tabIndex={0}
                          />
                          <div
                            className="ant-modal-content"
                          >
                            <div
                              className="ant-modal-body"
                              style={
                                Object {
                                  "height": "80vh",
                                  "width": "100%",
                                }
                              }
                            >
                              <iframe
                                src=".pdf"
                                style={
                                  Object {
                                    "height": "100%",
                                    "width": "100%",
                                  }
                                }
                                title="previewer"
                              />
                            </div>
                          </div>
                          <div
                            aria-hidden="true"
                            style={
                              Object {
                                "height": 0,
                                "overflow": "hidden",
                                "width": 0,
                              }
                            }
                            tabIndex={0}
                          />
                        </div>
                      </LazyRenderBox>
                    </AnimateChild>
                  </Animate>
                </div>
              </div>
            </Dialog>
          </Portal>
        </Portal>
      </PortalWrapper>
    </Component>
  </Modal>
</PreviewPDFModal>
`;

exports[`utils function: PreviewPDFModal PreviewPDFModal render test 1`] = `
<PreviewPDFModal
  href=".pdf"
  onCancel={[MockFunction]}
>
  <Modal
    bodyStyle={
      Object {
        "height": "80vh",
        "width": "100%",
      }
    }
    centered={true}
    closable={false}
    confirmLoading={false}
    destroyOnClose={true}
    footer={null}
    maskTransitionName="fade"
    okType="primary"
    onCancel={[Function]}
    transitionName="zoom"
    visible={true}
    width={1000}
  >
    <Component
      bodyStyle={
        Object {
          "height": "80vh",
          "width": "100%",
        }
      }
      closable={false}
      closeIcon={
        <span
          className="ant-modal-close-x"
        >
          <Close
            className="ant-modal-close-icon"
          />
        </span>
      }
      confirmLoading={false}
      destroyOnClose={true}
      footer={null}
      maskTransitionName="fade"
      okType="primary"
      onCancel={[Function]}
      onClose={[Function]}
      prefixCls="ant-modal"
      transitionName="zoom"
      visible={true}
      width={1000}
      wrapClassName="ant-modal-centered"
    >
      <PortalWrapper
        visible={true}
      >
        <Portal
          getContainer={[Function]}
        >
          <Portal
            containerInfo={
              <div>
                <div>
                  <div
                    class="ant-modal-mask fade-appear"
                  />
                  <div
                    class="ant-modal-wrap ant-modal-centered"
                    role="dialog"
                    tabindex="-1"
                  >
                    <div
                      class="ant-modal zoom-appear"
                      role="document"
                      style="width: 1000px;"
                    >
                      <div
                        aria-hidden="true"
                        style="width: 0px; height: 0px; overflow: hidden;"
                        tabindex="0"
                      />
                      <div
                        class="ant-modal-content"
                      >
                        <div
                          class="ant-modal-body"
                          style="width: 100%; height: 80vh;"
                        >
                          <iframe
                            src=".pdf"
                            style="width: 100%; height: 100%;"
                            title="previewer"
                          />
                        </div>
                      </div>
                      <div
                        aria-hidden="true"
                        style="width: 0px; height: 0px; overflow: hidden;"
                        tabindex="0"
                      />
                    </div>
                  </div>
                </div>
              </div>
            }
          >
            <Dialog
              bodyStyle={
                Object {
                  "height": "80vh",
                  "width": "100%",
                }
              }
              className=""
              closable={false}
              closeIcon={
                <span
                  className="ant-modal-close-x"
                >
                  <Close
                    className="ant-modal-close-icon"
                  />
                </span>
              }
              confirmLoading={false}
              destroyOnClose={true}
              footer={null}
              getContainer={[Function]}
              getOpenCount={[Function]}
              keyboard={true}
              mask={true}
              maskClosable={true}
              maskTransitionName="fade"
              okType="primary"
              onCancel={[Function]}
              onClose={[Function]}
              prefixCls="ant-modal"
              transitionName="zoom"
              visible={true}
              width={1000}
              wrapClassName="ant-modal-centered"
            >
              <div>
                <Animate
                  animation={Object {}}
                  component=""
                  componentProps={Object {}}
                  key="mask"
                  onAppear={[Function]}
                  onEnd={[Function]}
                  onEnter={[Function]}
                  onLeave={[Function]}
                  showProp="visible"
                  transitionAppear={true}
                  transitionEnter={true}
                  transitionLeave={true}
                  transitionName="fade"
                >
                  <AnimateChild
                    animation={Object {}}
                    key="mask"
                    transitionAppear={true}
                    transitionEnter={true}
                    transitionLeave={true}
                    transitionName="fade"
                  >
                    <LazyRenderBox
                      className="ant-modal-mask"
                      hiddenClassName="ant-modal-mask-hidden"
                      key="mask"
                      style={Object {}}
                      visible={true}
                    >
                      <div
                        className="ant-modal-mask"
                        style={Object {}}
                      />
                    </LazyRenderBox>
                  </AnimateChild>
                </Animate>
                <div
                  aria-labelledby={null}
                  className="ant-modal-wrap ant-modal-centered"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  onMouseUp={[Function]}
                  role="dialog"
                  style={
                    Object {
                      "display": null,
                    }
                  }
                  tabIndex={-1}
                >
                  <Animate
                    animation={Object {}}
                    component=""
                    componentProps={Object {}}
                    key="dialog"
                    onAppear={[Function]}
                    onEnd={[Function]}
                    onEnter={[Function]}
                    onLeave={[Function]}
                    showProp="visible"
                    transitionAppear={true}
                    transitionEnter={true}
                    transitionLeave={true}
                    transitionName="zoom"
                  >
                    <AnimateChild
                      animation={Object {}}
                      key="dialog-element"
                      transitionAppear={true}
                      transitionEnter={true}
                      transitionLeave={true}
                      transitionName="zoom"
                    >
                      <LazyRenderBox
                        className="ant-modal "
                        key="dialog-element"
                        onMouseDown={[Function]}
                        role="document"
                        style={
                          Object {
                            "width": 1000,
                          }
                        }
                        visible={true}
                      >
                        <div
                          className="ant-modal "
                          onMouseDown={[Function]}
                          role="document"
                          style={
                            Object {
                              "width": 1000,
                            }
                          }
                        >
                          <div
                            aria-hidden="true"
                            style={
                              Object {
                                "height": 0,
                                "overflow": "hidden",
                                "width": 0,
                              }
                            }
                            tabIndex={0}
                          />
                          <div
                            className="ant-modal-content"
                          >
                            <div
                              className="ant-modal-body"
                              style={
                                Object {
                                  "height": "80vh",
                                  "width": "100%",
                                }
                              }
                            >
                              <iframe
                                src=".pdf"
                                style={
                                  Object {
                                    "height": "100%",
                                    "width": "100%",
                                  }
                                }
                                title="previewer"
                              />
                            </div>
                          </div>
                          <div
                            aria-hidden="true"
                            style={
                              Object {
                                "height": 0,
                                "overflow": "hidden",
                                "width": 0,
                              }
                            }
                            tabIndex={0}
                          />
                        </div>
                      </LazyRenderBox>
                    </AnimateChild>
                  </Animate>
                </div>
              </div>
            </Dialog>
          </Portal>
        </Portal>
      </PortalWrapper>
    </Component>
  </Modal>
</PreviewPDFModal>
`;
